Ajout des données sur le Serveur du Groupe Rocky

--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -23,12 +23,20 @@
                                 <p:menuitem value="Membre" url="membre.xhtml"/>
                                 <p:menuitem value="Formation" url="formation.xhtml"/>
                                 <p:menuitem value="Paiement" url="paiement.xhtml"/>
+                                <p:menuitem value="Evaluation" url="evaluation.xhtml"/>
+                                <p:menuitem value="Formateur" url="formateur.xhtml"/>
+                                <p:menuitem value="Enseigner" url="enseigner.xhtml"/>
+                                <p:menuitem value="Universite" url="universite.xhtml"/>
                             </p:submenu>
                             <p:submenu label="Mise à jour">
                                 <p:menuitem value="Module" url="#"/>
                                 <p:menuitem value="Membre" url="selectMembre.xhtml"/>
                                 <p:menuitem value="Formation" url="#"/>
                                 <p:menuitem value="Paiement" url="#"/>
+                                <p:menuitem value="Evaluation" url="#"/>
+                                <p:menuitem value="Formateur" url="#"/>
+                                <p:menuitem value="Enseigner" url="#"/>
+                                <p:menuitem value="Universite" url="#"/>
                             </p:submenu>
                         </p:menubar>
                     </ui:insert>
