Ajout des formateurs avec des modules

--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -27,6 +27,7 @@
                                 <p:menuitem value="Formateur" url="formateur.xhtml"/>
                                 <p:menuitem value="Enseigner" url="enseigner.xhtml"/>
                                 <p:menuitem value="Universite" url="universite.xhtml"/>
+                                <p:menuitem value="Module au Formateur" url="SelectFormateur.xhtml"/>
                             </p:submenu>
                             <p:submenu label="Mise à jour">
                                 <p:menuitem value="Module" url="#"/>
