--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -26,8 +26,16 @@
                                             <f:setPropertyActionListener target="#{inscription.action}" value="Inscription"/>
                                         </h:commandLink>
                                     </p:menuitem>
-                                    <p:menuitem value="Module" url="module.xhtml"/>
-                                    <p:menuitem value="Membre" url="membre.xhtml"/>
+                                    <p:menuitem>
+                                        <h:commandLink action="#{module.saisie()}" value="Module">
+                                            <f:setPropertyActionListener target="#{module.action}" value="saisie"/>
+                                        </h:commandLink>
+                                    </p:menuitem>
+                                    <p:menuitem>
+                                        <h:commandLink action="#{membre.saisie()}" value="Membre">
+                                            <f:setPropertyActionListener target="#{membre.action}" value="saisie"/>
+                                        </h:commandLink>
+                                    </p:menuitem>
                                     <p:menuitem value="Formation" url="formation.xhtml"/>
                                     <p:menuitem value="Paiement" url="paiement.xhtml"/>
                                     <p:menuitem value="Evaluation" url="evaluation.xhtml"/>
