--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -36,12 +36,21 @@
                                             <f:setPropertyActionListener target="#{membre.action}" value="saisie"/>
                                         </h:commandLink>
                                     </p:menuitem>
-                                    <p:menuitem value="Formation" url="formation.xhtml"/>
+                                    <p:menuitem>
+                                        <h:commandLink action="#{formation.selectModule()}" value="Formation">
+                                            <f:setPropertyActionListener target="#{formation.action}" value="Formation"/>
+                                        </h:commandLink>
+                                    </p:menuitem>
+                                    
                                     <p:menuitem value="Paiement" url="paiement.xhtml"/>
-                                    <p:menuitem value="Evaluation" url="evaluation.xhtml"/>
+                                     <p:menuitem>
+                                         <h:commandLink action="#{evaluation.selectMembre()}" value="Evaluation">
+                                            <f:setPropertyActionListener target="#{evaluation.action}" value="Evaluation"/>
+                                        </h:commandLink>
+                                    </p:menuitem>                                                                      
                                     <p:menuitem value="Formateur" url="formateur.xhtml"/>
                                     <p:menuitem value="Enseigner" url="enseigner.xhtml"/>
-                                    <p:menuitem value="Universite" url="universite.xhtml"/>
+                                    <p:menuitem value="Universite" url="universite.xhtml"/>                                  
                                     <p:menuitem value="Module au Formateur" url="SelectFormateur.xhtml"/>
                                 </p:submenu>
                                 <p:submenu label="Mise à jour">
