--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -40,8 +40,7 @@
                                         <h:commandLink action="#{formation.selectModule()}" value="Formation">
                                             <f:setPropertyActionListener target="#{formation.action}" value="Formation"/>
                                         </h:commandLink>
-                                    </p:menuitem>
-                                    
+                                    </p:menuitem>                                    
                                     <p:menuitem value="Paiement" url="paiement.xhtml"/>
                                     <p:menuitem>
                                          <h:commandLink action="#{evaluation.selectMembre()}" value="Evaluation">
@@ -50,17 +49,21 @@
                                     </p:menuitem> 
                                     <p:menuitem>
                                         <h:commandLink action="#{formateur.selectFormateur()}" value="Formateur">
-                                            <f:setPropertyActionListener target="#{formateur.action}" value="Formateurs"/>
+                                            <f:setPropertyActionListener target="#{membre.action}" value="Formateurs"/>
                                         </h:commandLink>
-                                    </p:menuitem>     
-                                    <p:menuitem value="Enseigner" url="enseigner.xhtml"/>
+                                    </p:menuitem>                                         
                                     <p:menuitem>
                                         <h:commandLink action="#{universite.selectDG()}" value="Universite">
                                             <f:setPropertyActionListener target="#{universite.action}" value="UniversiteDG"/>
                                         </h:commandLink>
                                     </p:menuitem>  
+                                     <p:menuitem>
+                                         <h:commandLink action="#{formation.selectMembre()}" value="Affectation à la formation">
+                                             <f:setPropertyActionListener target="#{formation.action}" value="AffectationFormation"/>
+                                        </h:commandLink>
+                                    </p:menuitem>  
                                                                     
-                                    <p:menuitem value="Module au Formateur" url="SelectFormateur.xhtml"/>
+                                    
                                 </p:submenu>
                                 <p:submenu label="Mise à jour">
                                     <p:menuitem>
