Resolution probleme sur le processus de formateur

--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -49,7 +49,7 @@
                                     </p:menuitem> 
                                     <p:menuitem>
                                         <h:commandLink action="#{formateur.selectFormateur()}" value="Formateur">
-                                            <f:setPropertyActionListener target="#{membre.action}" value="Formateurs"/>
+                                            <f:setPropertyActionListener target="#{formateur.action}" value="Formateurs"/>
                                         </h:commandLink>
                                     </p:menuitem>                                         
                                     <p:menuitem>
