Programmation du login

--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -19,6 +19,7 @@
                 <tr>
                     <td id="top" colspan="2">
                         <ui:insert name="top">
+                            #{utilisateur.nom} #{utilisateur.postNom} #{utilisateur.prenom}
                             <p:menubar>
                                 <p:submenu label="Saisie">
                                     <p:menuitem>
