Ajout de l'auteur sur module dans la BD et génération Id Module

--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -28,8 +28,8 @@
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                        <h:commandLink action="#{module.saisie()}" value="Module">
-                                            <f:setPropertyActionListener target="#{actionMessage.action}" value="saisie"/>
+                                        <h:commandLink action="#{module.selectMembre()}" value="Module">
+                                            <f:setPropertyActionListener target="#{actionMessage.action}" value="Module"/>
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
