modèle de redirection des pages du processus de saisie de la section

--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -29,7 +29,7 @@
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                         <h:commandLink action="#{section.selectUniversite()}" value="Section">
+                                         <h:commandLink action="selectUniversite?faces-redirect=true" value="Section">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Section"/>
                                         </h:commandLink>
                                     </p:menuitem>
