--- a/training/web/templates/mainTemplate.xhtml
+++ b/training/web/templates/mainTemplate.xhtml
@@ -21,10 +21,9 @@
                         <ui:insert name="top">
                             #{utilisateur.nom} #{utilisateur.postNom} #{utilisateur.prenom}
                             <p:menubar>
-                                <p:submenu label="Saisie">
-                                   
+                                <p:submenu label="Saisie">                      
                                     <p:menuitem>
-                                        <h:commandLink action="#{faculte.saisie()}" value="Faculté">
+                                        <h:commandLink action="saisieFaculte?faces-redirect=true" value="Faculté">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Faculté"/>
                                         </h:commandLink>
                                     </p:menuitem>
@@ -34,52 +33,52 @@
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                        <h:commandLink action="#{promotion.selectSection()}" value="Promotion">
+                                        <h:commandLink action="selectSection?faces-redirect=true" value="Promotion">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Promotion"/>
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                        <h:commandLink action="#{inscription.selectModule()}" value="Inscription à la formation">
+                                        <h:commandLink action="selectModule?faces-redirect=true" value="Inscription à la formation">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Inscription"/>
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                        <h:commandLink action="#{module.selectMembre()}" value="Module">
+                                        <h:commandLink action="selectMembre?faces-redirect=true" value="Module">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Module"/>
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                        <h:commandLink action="#{membre.saisie()}" value="Membre">
+                                        <h:commandLink action="membre?faces-redirect=true" value="Membre">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="saisie"/>
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem>
-                                        <h:commandLink action="#{formation.selectModule()}" value="Formation">
+                                        <h:commandLink action="selectModule?faces-redirect=true" value="Formation">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Formation"/>
                                         </h:commandLink>
                                     </p:menuitem>                                    
                                     <p:menuitem>
-                                         <h:commandLink action="#{evaluation.selectMembre()}" value="Paiement">
+                                         <h:commandLink action="selectMembre?faces-redirect=true" value="Paiement">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Paiement"/>
                                         </h:commandLink>
                                     </p:menuitem> 
                                     <p:menuitem>
-                                         <h:commandLink action="#{evaluation.selectMembre()}" value="Evaluation">
+                                         <h:commandLink action="selectMembre?faces-redirect=true" value="Evaluation">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Evaluation"/>
                                         </h:commandLink>
                                     </p:menuitem> 
                                     <p:menuitem>
-                                        <h:commandLink action="#{formateur.selectFormateur()}" value="Formateur">
+                                        <h:commandLink action="selectFormateur?faces-redirect=true" value="Formateur">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="Formateurs"/>
                                         </h:commandLink>
                                     </p:menuitem>                                         
                                     <p:menuitem>
-                                        <h:commandLink action="#{universite.selectDG()}" value="Universite">
+                                        <h:commandLink action="selectMembre?faces-redirect=true" value="Universite">
                                             <f:setPropertyActionListener target="#{actionMessage.action}" value="UniversiteDG"/>
                                         </h:commandLink>
                                     </p:menuitem>  
                                      <p:menuitem>
-                                         <h:commandLink action="#{formation.selectMembre()}" value="Affectation à la formation">
+                                         <h:commandLink action="selectMembre?faces-redirect=true" value="Affectation à la formation">
                                              <f:setPropertyActionListener target="#{actionMessage.action}" value="AffectationFormation"/>
                                         </h:commandLink>
                                     </p:menuitem>  
@@ -87,7 +86,7 @@
                                 </p:submenu>
                                 <p:submenu label="Mise à jour">
                                     <p:menuitem>
-                                        <h:commandLink action="#{module.selection()}" value="Module">                                           
+                                        <h:commandLink action="selectModule?faces-redirect=true" value="Module">                                           
                                         </h:commandLink>
                                     </p:menuitem>
                                     <p:menuitem value="Membre" url="selectMembre.xhtml"/>
